kubernetes/argocd/frigate/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate
  namespace: frigate
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
    cert-manager.io/cluster-issuer: star-home-neels-tech-issuer
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`frigate.home.neels.tech`)
      services:
        - name: frigate
          port: 80
  tls:
    secretName: frigate-home-neels-tech-tls
